--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,13 @@ a {
 img {
   width: 100%;
 }
+
+button.link {
+ background: none;
+ border: none;
+ margin:0;
+ padding: 3;
+ outline: none;
+ outline-offset: 0;
+ color: white
+}
