--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,10 @@
 		<link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-	<div id="root"></div>
-<script type="text/javascript" src="bundle.js"></script></body>
+    <div id="root"><%- reactComponent -%></div>
+    <script>
+        window.INITIAL_STATE=<%- initialState -%>
+    </script>
+    <script src="bundle.js"></script>
+</body>
 </html>
